--- a/src/main/webapp/resources/css/product-item.css
+++ b/src/main/webapp/resources/css/product-item.css
@@ -1,3 +1,4 @@
+/* Reset and Base Styles */
 * {
     margin: 0;
     padding: 0;
@@ -37,7 +38,6 @@ header {
     gap: 15px;
     align-items: center;
 }
-
 
 /* Main Content */
 .main-content {
@@ -260,33 +260,53 @@ header {
 .add-to-cart:hover {
     background: #333;
 }
-
-/* Pagination */
-.pagination {
+.search-container {
+    position: relative;
     display: flex;
-    justify-content: center;
-    margin-top: 40px;
-    gap: 5px;
 }
 
-.pagination a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: 30px;
+.search-input {
+    padding: 8px 15px;
     border: 1px solid #ddd;
-    text-decoration: none;
+    border-radius: 50px;
+    width: 250px;
+    outline: none;
+}
+
+.search-btn {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.active-element-a {
+    text-decoration: underline !important;
+    font-weight: bolder;
+}
+/* Pagination */
+.rating {
+    color: #FFD700;
+    margin-bottom: 8px;
+}
+.pagination-page {
+    margin: 20px 0;
+    text-align: center;
+}
+.pagination-page a {
+    display: inline-block;
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
     color: #333;
-    border-radius: 4px;
+    text-decoration: none;
+    cursor: pointer;
 }
-
-.pagination a.active {
-    background: #333;
-    color: white;
-    border-color: #333;
-}
-
-.pagination a:hover:not(.active) {
-    background: #f1f1f1;
+.pagination-page a.active {
+    background-color: #333;
+    color: #fff;
+    font-weight: bold;
 }
